# nbjm-mcp

./: .gitignore  README.md  pyproject.toml
docs/: nbjm-spec.md
src/: nbjm_mcp.py
tests/: test_nbjm_mcp.py
