[project]
name = "nbjm-mcp"
version = "0.7.0"
description = "Token-efficient MCP server for Notion using NBJM (Notion Is Basically Just Markdown)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "parsy>=2.0",
]

[project.scripts]
nbjm-mcp = "nbjm_mcp:main"

[tool.setuptools]
py-modules = ["nbjm_mcp"]
package-dir = {"" = "src"}

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: marks tests as integration tests (require running server, credentials)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
